fixed flickering while caret is active

--- a/CodePrinter.css
+++ b/CodePrinter.css
@@ -260,6 +260,8 @@
   top: -50px;
   left: -50px;
   z-index: 100;
+  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-transform-style: preserve-3d;
 }
 .codeprinter .cp-caret-block {
   -webkit-transition: all 0 ease-in-out;
